--- a/src/components/PreviewModal/PreviewModal.scss
+++ b/src/components/PreviewModal/PreviewModal.scss
@@ -37,13 +37,16 @@
     width: 625px;
     gap: 40px;
     padding: 0 0 30px 0;
+    height: 510px;
+    overflow: hidden;
 
     &__cropper {
       width: 100%;
+      height: 100%;
       overflow: hidden;
-      height: 510px;
+      position: relative;
 
-      > img {
+      > * {
         width: 100%;
         height: 100%;
         object-fit: contain;
