--- a/src/pages/Video/Video.scss
+++ b/src/pages/Video/Video.scss
@@ -149,6 +149,10 @@
         overflow: hidden;
         position: relative;
 
+        > * {
+          object-fit: contain;
+        }
+
         &__box {
           cursor: pointer;
           display: flex;
@@ -167,7 +171,7 @@
             text-decoration-line: underline;
           }
         }
-        > img {
+        .video {
           width: 100%;
           height: 100%;
           object-fit: contain;
