--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   background: rgba(29, 15, 39, 0.05);
   backdrop-filter: blur(10px);
   position: fixed;
-  // z-index: 15;
+  z-index: 15;
   .container {
     padding: 20px 0;
     display: flex;
@@ -13,6 +13,8 @@
     justify-content: space-between;
 
     .logo {
+      cursor: pointer;
+
       display: flex;
       align-items: center;
       gap: 12px;
@@ -40,7 +42,7 @@
       font-size: 16px;
       font-weight: 600;
       line-height: 20px;
-      padding: 12px 32px ;
+      padding: 12px 32px;
     }
   }
 }
