--- a/src/pages/Publish/Publish.scss
+++ b/src/pages/Publish/Publish.scss
@@ -100,7 +100,9 @@
         overflow: hidden;
         border-radius: 4px;
 
-        > img {
+        > * {
+          width: 100%;
+          height: 100%;
           object-fit: contain;
         }
       }
