--- a/src/components/UI/StoryType/StoryType.scss
+++ b/src/components/UI/StoryType/StoryType.scss
@@ -48,8 +48,8 @@
     overflow: hidden;
     background: rgba(0, 0, 0, 0.2);
     display: flex;
-    padding: 30px 60.333px 26px 65px;
-    justify-content: flex-end;
+    padding: 30px 40px;
+    justify-content: center;
     align-items: center;
     align-self: stretch;
   }
