--- a/src/pages/Audio/Audio.scss
+++ b/src/pages/Audio/Audio.scss
@@ -40,6 +40,8 @@
       font-size: 18px;
       font-weight: 700;
       line-height: 140%;
+      width: 100%;
+      text-align: start;
     }
 
     &--story-title {
