--- a/src/pages/Print/Print.scss
+++ b/src/pages/Print/Print.scss
@@ -1,3 +1,26 @@
+@mixin p {
+  width: 100%;
+  color: #f0dcd8;
+  text-align: right;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: -0.5px;
+}
+@mixin select {
+  width: 100%;
+  padding: 24px;
+  display: flex;
+  align-self: center;
+  justify-content: space-between;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+}
+
 .print {
   width: 100%;
   display: flex;
@@ -9,7 +32,6 @@
   &--block {
     display: flex;
     width: 1200px;
-    height: 424px;
     padding: 24px;
     flex-direction: column;
     align-items: flex-start;
@@ -17,5 +39,251 @@
     border-radius: 6px;
     border: 2px solid rgba(255, 255, 255, 0.12);
     background: rgba(29, 15, 39, 0.4);
+    .storyStyleSelectOpened {
+      @include select;
+      border-radius: 4px;
+      border: 1px solid rgba(236, 237, 239, 0.5);
+      background: linear-gradient(
+          85deg,
+          rgba(0, 0, 0, 0.2) 12.59%,
+          rgba(0, 0, 0, 0.17) 98.77%
+        ),
+        rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(48px);
+    }
+    .storyStyleSelect {
+      @include select;
+      border-radius: 6px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(48px);
+    }
+    .storyStyleSelect,
+    .storyStyleSelectOpened {
+      > label {
+        color: #fff;
+        font-feature-settings: "clig" off, "liga" off;
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 400;
+        letter-spacing: -0.5px;
+        opacity: 0.5;
+      }
+
+      .list {
+        position: absolute;
+        top: 105%;
+        left: 0;
+        width: 100%;
+        display: flex;
+        padding: 12px;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        border-radius: 6px;
+        border: 1px solid rgba(236, 237, 239, 0.5);
+        background: linear-gradient(
+            85deg,
+            rgba(0, 0, 0, 0.2) 12.59%,
+            rgba(0, 0, 0, 0.17) 98.77%
+          ),
+          rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(20px);
+
+        > li {
+          width: 100%;
+          text-align: start;
+          padding: 12px 0;
+          list-style: none;
+          color: #fff;
+          font-family: Lato, sans-serif;
+          font-size: 16px;
+          font-weight: 700;
+          line-height: 24px;
+        }
+      }
+    }
+
+    &__bottom {
+      width: 100%;
+      height: 294px;
+      display: flex;
+      align-items: start;
+      gap: 16px;
+      
+      &__left {
+        width: 54%;
+        height: 100%;
+        display: flex;
+        align-items: start;
+        gap: 10px;
+
+        .left {
+          height: 100%;
+          display: flex;
+          width: 400px;
+          padding: 20px 24px;
+          align-items: center;
+          align-self: stretch;
+          flex-direction: column;
+          border-radius: 4px;
+          border: 1px solid rgba(0, 0, 0, 0.1);
+          background: rgba(255, 255, 255, 0.2);
+          backdrop-filter: blur(48px);
+          gap: 50px;
+          > p {
+            @include p;
+          }
+
+          &--upload {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            > label {
+              @include p;
+              cursor: pointer;
+            }
+          }
+          .image {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            > img {
+              object-fit: contain;
+              width: auto;
+              height: auto;
+              max-width: 100%;
+              max-height: 100%;
+            }
+            .remove {
+              position: absolute;
+              right: 10px;
+              top: 10px;
+              cursor: pointer;
+              z-index: 2;
+              cursor: pointer;
+            }
+          }
+        }
+        .right {
+          width: 100%;
+          height: 100%;
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-template-rows: repeat(2, 1fr);
+          grid-column-gap: 10px;
+          grid-row-gap: 10px;
+
+          &--box {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 4px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(48px);
+
+            .image {
+              width: 100%;
+              height: 100%;
+              position: relative;
+              > img {
+                object-fit: contain;
+                width: auto;
+                height: auto;
+                max-width: 100%;
+                max-height: 100%;
+              }
+              .remove {
+                position: absolute;
+                right: 10px;
+                top: 10px;
+                cursor: pointer;
+                z-index: 2;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+      &__right {
+        display: flex;
+        width: 45%;
+        height: 292px;
+        padding: 20px 24px;
+        justify-content: space-between;
+        align-items: flex-start;
+        border-radius: 4px;
+        gap: 8px;
+        border: 1px solid rgba(254, 238, 140, 0.2);
+        background: rgba(251, 248, 200, 0.1);
+        backdrop-filter: blur(48px);
+        overflow: hidden;
+
+        .text-area {
+          width: 100%;
+          height: 100%;
+          resize: none;
+          background: transparent;
+          border: none;
+          outline: none;
+          color: var(--Enactive, #f0dcd8);
+          font-feature-settings: "clig" off, "liga" off;
+          font-family: Inter;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 28px;
+          letter-spacing: -0.5px;
+
+          &::placeholder {
+            color: var(--Enactive, #f0dcd8);
+            font-feature-settings: "clig" off, "liga" off;
+            font-family: Inter;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 28px;
+            letter-spacing: -0.5px;
+            opacity: 0.7;
+          }
+        }
+      }
+    }
+  }
+
+  &--btns {
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &__btn {
+      width: 420px;
+      cursor: pointer;
+    }
+  }
+}
+
+.frame-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 150px 0 80px 0;
+  gap: 40px;
+
+  &__frames {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    width: 100%;
+  }
+  &--btns {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
