--- a/src/pages/Audio/Audio.scss
+++ b/src/pages/Audio/Audio.scss
@@ -123,7 +123,7 @@
           height: 100%;
           position: relative;
           > img {
-            object-fit: contain;
+            object-fit: cover;
             width: auto;
             height: auto;
             max-width: 100%;
@@ -170,7 +170,7 @@
               height: 100%;
               position: relative;
               > img {
-                object-fit: contain;
+                object-fit: cover;
                 width: auto;
                 height: auto;
                 max-width: 100%;
