--- a/src/pages/Print/Completed/Completed.scss
+++ b/src/pages/Print/Completed/Completed.scss
@@ -1,3 +1,25 @@
+@mixin box {
+  display: flex;
+  height: 100%;
+  padding: 20px 25px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(48px);
+  color: #fff;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: -0.5px;
+  cursor: pointer;
+}
+
 .completed-content {
   width: 100%;
   display: flex;
@@ -5,4 +27,176 @@
   align-items: center;
   padding: 150px 0 80px 0;
   gap: 40px;
+
+  &__title {
+    display: flex;
+    padding: 24px;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    align-self: stretch;
+    border-radius: 6px;
+    border: 2px solid rgba(255, 255, 255, 0.12);
+    background: rgba(29, 15, 39, 0.4);
+    backdrop-filter: blur(16px);
+
+    > p {
+      width: 100%;
+      text-align: start;
+      color: var(--Enactive, #f0dcd8);
+      font-family: Inter;
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 140%;
+    }
+
+    .quantity {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 68px;
+
+      &--left {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        height: 100%;
+        .box {
+          @include box;
+        }
+      }
+      &--right {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        .box {
+          @include box;
+        }
+      }
+    }
+  }
+
+  &__block {
+    display: flex;
+    padding: 24px;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border-radius: 6px;
+    border: 2px solid rgba(255, 255, 255, 0.12);
+    background: rgba(29, 15, 39, 0.4);
+    height: 350px;
+
+    .framed-content {
+      display: flex;
+      width: 80%;
+      padding: 18px;
+      align-items: flex-start;
+      gap: 18px;
+      border-radius: 4.605px;
+      border: 1.5px solid #fff;
+      background: rgba(29, 15, 39, 0.4);
+      position: relative;
+      height: 90%;
+
+      .frame {
+        position: absolute;
+      }
+      .frame-1 {
+        left: -23px;
+        top: -23px;
+      }
+      .frame-2 {
+        transform: rotate(90deg);
+        right: -23px;
+        top: -25px;
+      }
+      .frame-3 {
+        transform: rotate(180deg);
+        bottom: -23px;
+        right: -23px;
+      }
+      .frame-4 {
+        transform: rotate(270deg);
+        left: -23px;
+        bottom: -25px;
+      }
+
+      .left {
+        width: 55%;
+        display: flex;
+        align-items: self-start;
+        gap: 10px;
+        height: 100%;
+
+        &--first {
+          display: flex;
+          width: 45%;
+          justify-content: center˝;
+          align-items: center;
+          border-radius: 3px;
+          overflow: hidden;
+          height: 100%;
+          border: 1px solid rgba(255, 255, 255, 0.12);
+
+          > img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        &--second {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-template-rows: repeat(2, 1fr);
+          grid-column-gap: 10px;
+          grid-row-gap: 10px;
+          width: 54%;
+          height: 100%;
+
+          &__box {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            border-radius: 3px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid rgba(255, 255, 255, 0.12);
+
+            > img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+        }
+      }
+      .right {
+        width: 47%;
+        color: #fff;
+        font-feature-settings: "clig" off, "liga" off;
+        font-family: Inter;
+        font-size: 15.35px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 21.49px; /* 140% */
+      }
+    }
+  }
+
+  &--btns {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+
+    > * {
+      cursor: pointer;
+  }}
 }
