--- a/src/pages/Print/Print.scss
+++ b/src/pages/Print/Print.scss
@@ -110,7 +110,7 @@
       display: flex;
       align-items: start;
       gap: 16px;
-      
+
       &__left {
         width: 54%;
         height: 100%;
@@ -149,12 +149,14 @@
             width: 100%;
             height: 100%;
             position: relative;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             > img {
-              object-fit: contain;
-              width: auto;
-              height: auto;
-              max-width: 100%;
-              max-height: 100%;
+              object-fit: cover;
+              width: 100%;
+              height: 100%;
             }
             .remove {
               position: absolute;
@@ -188,12 +190,14 @@
               width: 100%;
               height: 100%;
               position: relative;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              overflow: hidden;
               > img {
-                object-fit: contain;
-                width: auto;
-                height: auto;
-                max-width: 100%;
-                max-height: 100%;
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
               }
               .remove {
                 position: absolute;
