--- a/src/pages/Publish/Element.scss
+++ b/src/pages/Publish/Element.scss
@@ -32,6 +32,7 @@
       width: 64px;
       height: 64px;
       border-radius: 2px;
+      object-fit: cover;
     }
     &--info {
       display: flex;
