--- a/src/pages/Publish/Publish.scss
+++ b/src/pages/Publish/Publish.scss
@@ -24,7 +24,7 @@
   text-align: center;
   gap: 12px;
 
-  .story-title {
+  &__story-title {
     width: 100%;
     padding: 24px;
     border-radius: 6px;
@@ -34,29 +34,6 @@
     flex-direction: column;
     gap: 12px;
 
-    &__input {
-      width: 100%;
-      padding: 20px 24px;
-      border-radius: 4px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      background: rgba(251, 248, 200, 0.1);
-      backdrop-filter: blur(48px);
-      display: flex;
-      align-items: center;
-      gap: 10px;
-
-      > input {
-        width: 100%;
-        background: transparent;
-        border: none;
-        outline: none;
-        @include text;
-
-        &::placeholder {
-          @include text;
-        }
-      }
-    }
     &__title {
       width: 100%;
       text-align: start;
