--- a/src/components/VoiceRecorder/VoiceRecorder.scss
+++ b/src/components/VoiceRecorder/VoiceRecorder.scss
@@ -39,7 +39,7 @@
     width: 100%;
     height: 20px;
   }
-  .btns {
+  .buttons {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -84,7 +84,7 @@
     height: 20px;
   }
 
-  .btns {
+  .buttons {
     display: flex;
     align-items: center;
     justify-content: space-between;
