--- a/src/pages/Audio/Audio.scss
+++ b/src/pages/Audio/Audio.scss
@@ -201,21 +201,11 @@
       }
     }
   }
-  .next {
-    @include btn;
-    color: #d7d6de;
-    margin: 50px 0 10px 0;
-    border-radius: 6px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    background: rgba(29, 15, 39, 0.4);
-    backdrop-filter: blur(48px);
-    padding: 16px 0;
-  }
-  .skip {
-    @include btn;
-    background: transparent;
-    border: none;
-    color: #f0dcd8;
-    opacity: 0.65;
+  .btns {
+    margin: 40px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
   }
 }
